# skyfall

./: Cargo.toml  LICENSE  README.md
.github/workflows/: check.yml  publish.yml
clients/skyfall-desktop/: index.html  package.json  pnpm-lock.yaml
clients/skyfall-desktop/src/: App.tsx  main.tsx  routes.tsx
clients/skyfall-desktop/src-tauri/: Cargo.toml  tauri.conf.json
clients/skyfall-desktop/src-tauri/capabilities/: default.json
clients/skyfall-desktop/src-tauri/src/: lib.rs  main.rs
clients/skyfall-desktop/src-tauri/src/routes/: network.rs
clients/skyfall-desktop/src/lang/: en.json  index.tsx
clients/skyfall-desktop/src/styles/: index.scss
clients/skyfall-desktop/src/theme/: cssVariableResolver.ts  theme.ts
libskyfall/: Cargo.toml  README.md
libskyfall/src/: channel.rs  client.rs  context.rs  crypto.rs  error.rs  identity.rs  lib.rs  utils.rs
libskyfall/src/handlers/: common.rs  echo_handler.rs  mod.rs  staticfiles_handler.rs
libskyfall_macros/: Cargo.toml
libskyfall_macros/src/: lib.rs  util.rs
libskyfall_macros/src/route/: handler.rs  mod.rs  route.rs
skyfall_testing/: Cargo.toml
skyfall_testing/src/: main.rs
