[workspace]
resolver = "3"
members = ["libskyfall", "clients/skyfall-desktop/src-tauri", "skyfall_testing"]

[workspace.dependencies]
aes-gcm = "0.10.3"
anyhow = "1.0.98"
async-channel = "2.5.0"
base64 = "0.22.1"
bon = "3.6.4"
chrono = "0.4.41"
crc = "3.3.0"
futures = "0.3.31"
iroh = "0.90.0"
iroh-quinn-proto = "0.13.0"
names = { version = "0.14.0", default-features = false }
oqs = "0.11.0"
parking_lot = "0.12.4"
rmp = "0.8.14"
rmp-serde = "1.3.0"
serde = "1.0.219"
serde_json = "1.0.140"
serde_with = "3.14.0"
sha2 = "0.10.9"
tauri = "2"
tauri-build = "2"
tauri-plugin-opener = "2"
thiserror = "2.0.12"
tokio = "1.46.1"
typenum = "1.18.0"
uuid = "1.17.0"
libskyfall = {path = "./libskyfall", version = "0.1.0"}
async-trait = "0.1.88"
base16ct = "0.2.0"
enum_common_fields = "0.7.0"
