[package]
name = "libskyfall"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std", "stream"] }
anyhow = "1.0.98"
base64 = "0.22.1"
bon = "3.6.4"
chrono = { version = "0.4.41", features = ["serde"] }
iroh = { version = "0.90.0", features = ["discovery-local-network", "discovery-pkarr-dht"] }
oqs = { version = "0.11.0", features = ["vendored", "serde"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.14.0", features = ["hex", "base64", "chrono"] }
sha2 = "0.10.9"
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.17.0", features = ["v4", "fast-rng", "serde"] }
names = { version = "0.14.0", default-features = false }
parking_lot = { version = "0.12.4", features = ["arc_lock", "serde", "send_guard"] }
rmp = "0.8.14"
rmp-serde = "1.3.0"
typenum = "1.18.0"
crc = "3.3.0"
iroh-quinn-proto = "0.13.0"
futures = { version = "0.3.31", features = ["compat", "io-compat"] }
async-channel = "2.5.0"
