[package]
name = "libskyfall"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = { workspace = true, features = ["std", "stream"] }
anyhow = { workspace = true }
base64 = { workspace = true }
bon = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
iroh = { workspace = true, features = ["discovery-local-network", "discovery-pkarr-dht"] }
oqs = { workspace = true, features = ["vendored", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["hex", "base64", "chrono"] }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
uuid = { workspace = true, features = ["v4", "fast-rng", "serde"] }
names = { workspace = true }
parking_lot = { workspace = true, features = ["arc_lock", "serde", "send_guard"] }
rmp = { workspace = true }
rmp-serde = { workspace = true }
typenum = { workspace = true }
crc = { workspace = true }
iroh-quinn-proto = { workspace = true }
futures = { workspace = true, features = ["compat", "io-compat"] }
async-channel = { workspace = true }
enum_common_fields = "0.7.0"
async-trait = "0.1.88"
base16ct = { version = "0.2.0", features = ["alloc", "std"] }
